# accshift

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  index.html  oxlint.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  dev-build.yml  release.yml
crates/accshift-cli/: Cargo.toml
crates/accshift-cli/src/: context.rs  folders.rs  main.rs  output.rs  pin.rs  settings.rs
crates/accshift-core/: Cargo.toml
crates/accshift-core/src/: config.rs  context.rs  error.rs  fs_utils.rs  lib.rs  lock.rs  logging.rs  runtime.rs  snapshot_crypto.rs  storage.rs  themes.rs
crates/accshift-core/src/os/: common.rs  linux.rs  macos.rs  mod.rs  registry.rs  secrets.rs  steam_registry.rs  unsupported.rs  windows.rs
crates/accshift-core/src/telemetry/: client.rs  events.rs  install_id.rs  log_bundle.rs  mod.rs  queue.rs
docs/: RELEASING.md
public/: boot-theme.js
scripts/: stage-cli.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_runtime.rs  commands.rs  commands_telemetry.rs  config.rs  error.rs  fs_utils.rs  logging.rs  main.rs  storage.rs  tauri_context.rs  telemetry_runtime.rs  themes.rs
src-tauri/src/os/: macos.rs  mod.rs  unsupported.rs  windows.rs
src-tauri/src/steam/: accounts.rs  avatar.rs  bans.rs  bulk_edit.rs  mod.rs  profile.rs  registry.rs  vdf.rs
src-tauri/windows/: hooks.nsh
src/assets/: no-thanks.webm  trade-offer.webm
src/lib/: avatarCache.ts  friendCode.ts  notifications.ts  settings.ts  steamIdUtils.ts
src/lib/app/: AppDialogs.svelte  AppScreenOverlays.svelte  AppWorkspace.svelte  StreamerModeOverlay.svelte  bootPayload.ts  deepLinkUrl.test.ts  deepLinkUrl.ts  folderNavigation.svelte.ts  platformAddFlow.svelte.ts  platformShell.svelte.ts  useAccountCardExtensions.svelte.ts  useAppDialogs.svelte.ts  useAppLifecycle.svelte.ts  useAppNavigation.svelte.ts  useAppUpdater.svelte.ts  useBulkEdit.svelte.ts  useCardFocus.svelte.ts  useDeepLink.svelte.ts  useDeepLink.test.ts  useDisplayPipeline.svelte.ts  useDisplayPipeline.test.ts  useExtensionContent.svelte.ts  usePersonas.svelte.ts  usePersonas.test.ts  useSecureScreen.svelte.ts  useSettingsPanel.svelte.ts  useSteamMaintenance.svelte.ts  useStreamerMode.svelte.ts  useUiScale.svelte.ts  useVisiblePriming.svelte.ts
src/lib/components/: AccountCard.svelte  ContextMenu.svelte  NotificationPanel.svelte  Settings.svelte  TitleBar.svelte  Toast.svelte
src/lib/features/commandPalette/: CommandPalette.svelte  fuzzy.ts  registry.ts
src/lib/features/folders/: BackCard.svelte  Breadcrumb.svelte  FolderCard.svelte  SectionHeader.svelte  store.ts  types.ts
src/lib/features/notifications/: NotificationPanel.svelte  Toast.svelte  store.svelte.ts  store.ts  types.ts
src/lib/features/personas/: PersonaCover.svelte  PersonaEditor.svelte  PersonaWizard.svelte  PersonasPanel.svelte  store.ts  types.ts
src/lib/features/settings/: PlatformPathSettingsTab.svelte  Settings.svelte  SettingsGeneralTab.svelte  SettingsPlatformsTab.svelte  SettingsPrivacyTab.svelte  TelemetryOnboarding.svelte  ToggleSetting.svelte  store.ts  types.ts  useSettingsTabBar.svelte.ts
src/lib/features/steam/: adapter.ts  avatarCache.ts  contextMenu.ts  profileCache.ts  steamApi.ts  steamService.ts  types.ts
src/lib/i18n/: dictionaries.svelte.ts  index.test.ts  index.ts  messages.fr.ts  messages.test.ts  messages.ts
src/lib/shared/: accountCardColors.test.ts  accountCardColors.ts  accountCardNotes.test.ts  accountCardNotes.ts  accountWarnings.ts  appLogger.ts  avatarFallback.test.ts  avatarFallback.ts  cachedMapStore.test.ts  cachedMapStore.ts  cardExtension.ts  dragAndDrop.svelte.ts  folderCardColors.ts  pin.test.ts  pin.ts  platform.ts  platformIcons.ts  profileCache.ts  sections.ts  time.test.ts  time.ts  trackDependencies.ts  types.ts  url.test.ts  url.ts  useAccountLoader.svelte.ts  useAccountLoader.test.ts  useAvatarLoader.svelte.ts  useGridLayout.svelte.ts  useInactivityBlur.svelte.ts  useNumericInput.svelte.ts  useWindowActivity.svelte.ts  viewMode.ts
src/lib/shared/components/: AccountCard.svelte  BaseDialog.svelte  CardExtensionPanel.svelte  ConfirmDialog.svelte  ContextMenu.svelte  InputDialog.svelte  ListRow.svelte  ListView.svelte  PreviewPanel.svelte  SectionHeader.svelte  SettingsCard.svelte  TitleBar.svelte  ViewToggle.svelte  WaveText.svelte
src/lib/shared/contextMenu/: accountAppearanceActions.ts  accountMenuBuilder.ts  actions.ts  platformMenuBuilder.ts  types.ts
src/lib/shared/keyboard/: controller.ts  types.ts
src/lib/storage/: clientStorage.test.ts  clientStorage.ts
src/lib/theme/: backdrop.ts  motion.ts  themes.test.ts  themes.ts
telemetry/: .gitignore  README.md  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  wrangler.toml
telemetry/migrations/: 0001_initial_schema.sql  0001_log_uploads_note.sql  0002_consent_choices.sql  0003_drop_log_uploads.sql
telemetry/src/: index.test.ts  index.ts
