[package]
name = "accshift-gui"
description = "Accshift desktop account switcher (Tauri GUI)"
version.workspace = true
edition.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
accshift-core = { path = "../crates/accshift-core" }
tauri = { workspace = true, features = ["macos-private-api"] }
tauri-plugin-process = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[dependencies.mimalloc]
workspace = true
