[package]
name = "accshift-cli"
description = "Command-line interface for accshift"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "accshift"
path = "src/main.rs"

[dependencies]
accshift-core = { path = "../accshift-core" }
clap = { workspace = true }
directories = { workspace = true }
is-terminal = { workspace = true }
pbkdf2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
unicode-width = { workspace = true }
