[package]
name = "accshift-core"
description = "Core logic for accshift: platforms, config, storage, OS primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
sysinfo = { workspace = true }
open = { workspace = true }
fs4 = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
windows-sys = { workspace = true }
